[Feature] (login) : completed login
- added verify user middleware
- used cookies to pass the token
- added all the work done in documentation
- this still open to changes
