# Backend/src/infrastructure/external/Docs/swagger.json
@@ -127,6 +127,7 @@
 					"password",
 					"phone",
 					"role_id",
+					"role",
 					"created_at"
 				],
 				"type": "object",
@@ -253,6 +254,27 @@
 					"password",
 					"phone",
 					"role_id"
+				],
+				"type": "object",
+				"additionalProperties": true
+			},
+			"Partial_User_": {
+				"properties": {},
+				"type": "object",
+				"description": "Make all properties in T optional"
+			},
+			"log_user_dto": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email",
+					"password"
 				],
 				"type": "object",
 				"additionalProperties": true
@@ -1360,6 +1382,90 @@
 				}
 			}
 		},
+		"/auth/login": {
+			"post": {
+				"operationId": "Login",
+				"responses": {
+					"200": {
+						"description": "welcome user",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"properties": {
+												"error": {},
+												"data": {
+													"properties": {
+														"token": {
+															"type": "string"
+														},
+														"user": {
+															"$ref": "#/components/schemas/Partial_User_"
+														}
+													},
+													"required": [
+														"token",
+														"user"
+													],
+													"type": "object"
+												},
+												"message": {
+													"type": "string"
+												},
+												"status": {
+													"type": "number",
+													"format": "double"
+												}
+											},
+											"required": [
+												"data",
+												"message",
+												"status"
+											],
+											"type": "object"
+										},
+										{
+											"properties": {
+												"data": {},
+												"error": {
+													"type": "string"
+												},
+												"message": {
+													"type": "string"
+												},
+												"status": {
+													"type": "number",
+													"format": "double"
+												}
+											},
+											"required": [
+												"error",
+												"message",
+												"status"
+											],
+											"type": "object"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/log_user_dto"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/auth/{email}": {
 			"put": {
 				"operationId": "Update",
@@ -1503,6 +1609,38 @@
 						}
 					}
 				]
+			}
+		},
+		"/auth/logout": {
+			"post": {
+				"operationId": "Logout",
+				"responses": {
+					"200": {
+						"description": "Session Closed",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										},
+										"status": {
+											"type": "number",
+											"format": "double"
+										}
+									},
+									"required": [
+										"message",
+										"status"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
 			}
 		}
 	},
